@@ -4,8 +4,7 @@ import com.cookie.domain.director.dto.response.DirectorDetailResponse;
 import com.cookie.domain.director.entity.Director;
 import com.cookie.domain.director.repository.DirectorRepository;
 import com.cookie.domain.movie.dto.response.PersonDetailMovieInfo;
-import com.cookie.domain.movie.entity.MovieDirector;
-import com.cookie.domain.movie.repository.MovieDirectorRepository;
+import com.cookie.domain.movie.entity.Movie;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -17,7 +16,6 @@ import java.util.stream.Collectors;
 public class DirectorService {
 
     private final DirectorRepository directorRepository;
-    private final MovieDirectorRepository movieDirectorRepository;
 
     public DirectorDetailResponse getDirectorDetails(Long directorId) {
         // 1. 감독 정보 가져오기
@@ -25,19 +23,18 @@ public class DirectorService {
                 .orElseThrow(() -> new IllegalArgumentException("Director not found with id: " + directorId));
 
         // 2. 디렉팅한 영화 정보 가져오기
-        List<MovieDirector> movieDirectors = movieDirectorRepository.findAllMoviesByDirectorId(directorId);
+        List<Director> movieDirectors = directorRepository.findAllMoviesByDirectorId(directorId);
 
         // 3. ActorMovie 리스트 생성
         List<PersonDetailMovieInfo> directorMovieList = movieDirectors.stream()
-                .map(movieDirector -> {
-                    var movie = movieDirector.getMovie();
-                    return PersonDetailMovieInfo.builder()
-                            .title(movie.getTitle())
-                            .poster(movie.getPoster())
-                            .released(movie.getReleasedAt())
-                            .build();
-                })
-                .collect(Collectors.toList());
+                .flatMap(movieDirector -> movieDirector.getMovies().stream())
+                .map(movie -> PersonDetailMovieInfo.builder()
+                        .title(movie.getTitle())
+                        .poster(movie.getPoster())
+                        .released(movie.getReleasedAt())
+                        .build()
+                )
+                .toList();
 
         // 4. PersonDetailMovieInfo 생성 및 반환
         return DirectorDetailResponse.builder()
